--- a/templates/storybox.html
+++ b/templates/storybox.html
@@ -1,7 +1,7 @@
 <div class="box col-md-9">
     <div infinite-scroll="loadMoreStories()" infinite-scroll-distance='1'>
-    <div class="panel panel-default" ng-repeat="object in storyObjects">
-                <div class="panel-heading">
+    <div class="panel panel-default" ng-repeat="object in storyObjects" >
+                <div class="panel-heading" ng-init="like=0">
                     <ul class="nav nav-pills">
                     <li><img class="img-responsive" src="http://www.celebdetail.com/wp-content/uploads/2013/11/Katrina-Kaif-Boyfriend-age-Biography.jpg" alt="Chania" style="height:50px;width:50px" >
                     </li>
@@ -12,11 +12,11 @@
                 <div class="panel-body">{{object.content}}</div>
                 <div class="panel-footer">
                     <ul class="nav nav-pills" style="display:inline">
-                    <li style="display:inline"><a href="#/">Likes <span class="glyphicon glyphicon-thumbs-up"></span></a>
+                    <li style="display:inline" pg-like-check><a href="#/"><div ng-if="like==0">Likes</div><div ng-if="like==1">Dislikes </div></a>
                     </li>
                     <li style="display:inline"><a href="#/">Comment</a>
                     </li>
-                    <li class="navbar-right"><a href="#/"><button type="button" class="btn btn-primary btn-sm">Read More</button></a></li>
+                    <li class="navbar-right"><a href=""><button type="button" class="btn btn-primary btn-sm">Read More</button></a></li>
                     </ul>
                 </div>
         </div>
