added write box

--- a/templates/storybox.html
+++ b/templates/storybox.html
@@ -1,6 +1,6 @@
 <div class="box col-md-9">
-    <div infinite-scroll="loadMoreStories()" infinite-scroll-distance='1'>
-    <div class="panel panel-default" id="topic-box" ng-repeat="object in storyObjects" >
+    <div infinite-scroll="loadMoreStories()" infinite-scroll-distance='0'>
+    <div class="panel panel-default" id="topic-box" ng-repeat="object in storyObjects" style="box-shadow:1px 1px 5px grey;width:100%;border-radius:3px;margin-bottom:25px;">
                 <div class="panel-heading" ng-init="like=0">
                     <ul class="nav nav-pills" style="font-family:Lucida Sans Unicode">
                     <li><img class="img-circle" src="http://www.celebdetail.com/wp-content/uploads/2013/11/Katrina-Kaif-Boyfriend-age-Biography.jpg" alt="Chania" style="height:50px;width:50px" >
