--- a/templates/storybox.html
+++ b/templates/storybox.html
@@ -3,7 +3,7 @@
     <div class="panel panel-default" id="topic-box" ng-repeat="object in storyObjects" style="box-shadow:1px 1px 5px grey;width:100%;border-radius:3px;margin-bottom:25px;">
                 <div class="panel-heading" ng-init="like=0">
                     <ul class="nav nav-pills" style="font-family:Lucida Sans Unicode">
-                    <li><img class="img-circle" src="http://www.celebdetail.com/wp-content/uploads/2013/11/Katrina-Kaif-Boyfriend-age-Biography.jpg" alt="Chania" style="height:50px;width:50px" >
+                    <li><img class="img-circle" src="" alt="image" style="height:50px;width:50px" >
                     </li>
                     <li>{{object.name}}<br>{{object.time}}</li>
                     <li>
@@ -27,9 +27,9 @@
                 </div>
                 <div ng-if="!showDesc">
                     <ul class="nav nav-pills" style="display:inline">
-                    <li style="display:inline" pg-like-check><a href="#/"><div ng-if="like==0">Likes</div><div ng-if="like==1">Dislikes </div></a>
+                    <li style="display:inline" pg-like-check><a href=""><div ng-if="like==0">Likes</div><div ng-if="like==1">Dislikes </div></a>
                     </li>
-                    <li style="display:inline"><a href="#/">Comment</a>
+                    <li style="display:inline"><a href="">Comment</a>
                     </li>
                 </div>
         </div>
