update system added

--- a/templates/editbox.html
+++ b/templates/editbox.html
@@ -6,7 +6,7 @@
             <textarea cols="50" rows="15" ng-model="content" placeholder="Content" style="box-shadow:1px 1px 5px grey;width:100%;border-radius:3px;margin-bottom:5px;resize: none;"></textarea>
             <!-- <textarea cols="50" rows="1" ng-model="tags" placeholder="Tags" style="box-shadow:1px 1px 5px grey;width:100%;border-radius:3px;margin-bottom:5px;resize: none;"></textarea> -->
             <tags-input ng-model="tags" display-property="name"><auto-complete source="loadTags($query)"></auto-complete></tags-input>
-            <div ng-if="posted==0"><button type="button" class="btn btn-default" style="box-shadow:1px 1px 5px grey;float:left" pg-publish-button>Update</button></div>
+            <div ng-if="posted==0"><button type="button" class="btn btn-default" style="box-shadow:1px 1px 5px grey;float:left" ng-click="updatepost()">Update</button></div>
             <div ng-if="posted==0"><button type="button"  class="btn btn-default" style="box-shadow:1px 1px 5px grey;float:right" pg-save-button>Save as Draft</button></div>
             {{posted}}
         </div>
