more work on write post

--- a/templates/editbox.html
+++ b/templates/editbox.html
@@ -8,7 +8,11 @@
             <tags-input ng-model="tags" display-property="name"><auto-complete source="loadTags($query)"></auto-complete></tags-input>
             <div ng-if="posted==0"><button type="button" class="btn btn-default" style="box-shadow:1px 1px 5px grey;float:left" ng-click="updatepost()">Update</button></div>
             <div ng-if="posted==0"><button type="button"  class="btn btn-default" style="box-shadow:1px 1px 5px grey;float:right" pg-save-button>Save as Draft</button></div>
-            {{posted}}
+            <div class="panel panel-success"  style="box-shadow:1px 1px 5px grey;" ng-if="posted==1">
+                <div class="panel-body">
+                  <center>Updation successful</center>
+                </div>
+            </div>
         </div>
     </div>
 </div>
