--- a/templates/storybox.html
+++ b/templates/storybox.html
@@ -5,7 +5,7 @@
                     <ul class="nav nav-pills" style="font-family:Lucida Sans Unicode">
                     <li><img class="img-circle" src="" alt="image" style="height:50px;width:50px" >
                     </li>
-                    <li>{{object.name}}<br>{{object.time}}</li>
+                    <a href="#/person/{{object.user_id}}"><li>{{object.name}}<br>{{object.time}}</li></a>
                     <li>
                     <div class="text-center" style="width:180px;font-weight:bold">{{object.topic}}</div>
                     </li>
